feat: add skill tree detail page with visual and list views
- Implemented SkillTreeDetailPage component to display skill tree details.
- Added TreeHeader, VisualSkillTree, TreeProgress, TreeNodesList, and NodeCard components for rendering tree structure and progress.
- Introduced functionality for completing nodes and updating progress.
- Created SkillNode component for visual representation of nodes in the skill tree.

feat: create discover and journey services

- Added discoverService for fetching skill tree summaries and enrolling in trees.
- Implemented journeyService for user profile, enrolled trees, achievements, and dashboard data.

fix: resolve infinite logout loop in AuthContext

- Removed recursive call to logout function in AuthProvider.

style: update Vite config for cleaner formatting

- Refactored Vite config for improved readability and consistency.